--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "lodash": "^4.17.21",
+    "mysql2": "^3.11.3",
+    "serve-favicon": "^2.5.0"
   }
 }
