--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   }
 }
